<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ManualAddActivity">

    <ImageView
        android:id="@+id/imageViewURL"
        android:layout_width="200dp"
        android:layout_height="170dp"
        android:layout_weight="0.43"
        android:scaleType="fitCenter" />

    <ImageButton
        android:id="@+id/imageButtonShare"
        android:layout_width="40dp"
        android:onClick="imageButtonShare_onClick"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:background="@android:drawable/ic_menu_share" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subject"
        android:textSize="25sp"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/editTextSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:maxLines="1"
        android:textColor="#ffffff"
        android:inputType="text"
        android:lines="1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/body"
        android:textSize="25sp"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/editTextBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:maxLines="4" />

    <EditText
        android:id="@+id/editTextURL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/url"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:maxLines="4" />
<LinearLayout
    android:layout_width="match_parent"
    android:gravity="right"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/buttonShowImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buttonShowImage_onClick"
        android:text="@string/show"
        android:textSize="20sp"
        android:background="#000000"
        android:textColor="#6aade8" />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/year"
            android:inputType="number"
            android:maxLength="4"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:lines="1" />

        <EditText
            android:id="@+id/editTextRunTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/runTime"
            android:inputType="number"
            android:maxLength="3"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:lines="1" />



    </LinearLayout>

    <EditText
        android:id="@+id/editTextGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:layout_gravity="center_horizontal"
        android:hint="@string/genre"
        android:lines="1"
        android:inputType="text"
        android:maxLines="1" />

    <CheckBox
        android:id="@+id/checkBoxWatched"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:checked="false"
        android:text="@string/watch"
        android:textSize="20sp"
        android:textColor="#ffffff" />
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="wrap_content">

    <RatingBar
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:layout_weight="0.43"
        android:numStars="10"
        android:rating="3.5"
        android:stepSize="0.1"
        android:mirrorForRtl="false" />
    <TextView
        android:id="@+id/TextViewRate"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/rating"
        android:textColorHint="#ffffff" />
</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.43"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonOK_onClick"
            android:text="@string/ok"
            android:textSize="20sp"
            android:textColor="#6aade8"
            android:background="#000000" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonCancel_onClick"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:textColor="#6aade8"
            android:background="#000000" />
    </LinearLayout>

</LinearLayout>
